--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
         }
       ],
       "sameAs": [
-        "https://www.facebook.com/webtanksolutions",
-        "https://www.instagram.com/webtanksolutions",
-        "https://www.linkedin.com/company/webtanksolutions"
+        "https://www.facebook.com/WebTankSolutions/",
+        "https://www.instagram.com/webtanks/",
+        "https://www.linkedin.com/company/swebtank",
+        "https://www.refrens.com/webtank-solutions",
+        "https://twitter.com/WebtankS"
       ],
-      "priceRange": "R200 - R5000",
+      "priceRange": "R200 - R15000",
       "serviceType": ["Web Development", "SEO Services", "Cyber Security", "App Development", "Branding"]
     }
     </script>
@@ -615,10 +617,11 @@
                         <div class="mt-4">
                             <h5>Follow Us</h5>
                             <div class="social-icons mt-3">
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="https://www.facebook.com/WebTankSolutions/"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://twitter.com/WebtankS"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.instagram.com/webtanks/"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/company/swebtank"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="https://www.refrens.com/webtank-solutions"><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
@@ -671,10 +674,11 @@
                     <h5 class="footer-heading">About Webtank Solutions</h5>
                     <p>We provide comprehensive IT solutions and support services to help businesses thrive in the digital era.</p>
                     <div class="social-icons mt-3">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.facebook.com/WebTankSolutions/"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/WebtankS"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/webtanks/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/swebtank"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.refrens.com/webtank-solutions"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-md-2 mb-4 mb-md-0">
